[package]
name = "tide-governor"
description = "A rate-limiting middleware for tide"
homepage = "https://github.com/ohmree/tide-governor"
repository = "https://github.com/ohmree/tide-governor"
documentation = "https://docs.rs/tide-governor"
version = "1.0.1"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.3.1"
lazy_static = "1.4.0"
tide = "0.15.0"
